Fix padding on Select so Metric isn't cut off

--- a/src/SelectInput.css
+++ b/src/SelectInput.css
@@ -2,7 +2,7 @@ select {
 	font-size: 1rem;
 	margin-left: 0.5rem;
 	border: none;
-	padding: .3em 1em .3em .5em;
+	padding: .3em 2em .3em .5em;
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	appearance: none;
